fixed one tasks

--- a/myfirstpage.html
+++ b/myfirstpage.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <title>
-hello world of html online
+hello world of html online classes of HTML 
 </title>
 <link href='nit.jpg'rel='icon'/>
 </head>
 <body>
+<h1 style=text-align:center;background-color:blue:black">hello world of html online classes of HTML</h1>
 welcome to the class of html css javascript from naresh i technologies online course
 HTML,CSS,JAVASCRIPT
 </body>
